# legalmind-ai

./: .gitattributes  .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  visualize_agents.py
backend/app/: main.py
backend/app/agents/: __init__.py  clause_explanation_agent.py  document_agent.py  highlighting_agent.py  main_agent.py  qa_agent.py  risk_analysis_agent.py
backend/app/api/v1/: dependencies.py  routes.py
backend/app/core/: config.py  firebase.py  prompts.py
backend/app/services/: highlight_service.py  llm_service.py  pinecone_service.py  storage_service.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_routes.py
frontend/: index.html  package.json  pnpm-lock.yaml  style.css
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/[user_id]/: page.tsx
frontend/app/history/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: formatted-response.tsx  magnetic-button.tsx  profile-dropdown.tsx  risk-item.tsx  risk-score-ring.tsx  timeline.tsx
frontend/components/dashboard/: analyzing-document.tsx  clauses-panel.tsx  common-questions-panel.tsx  entities-panel.tsx  risks-panel.tsx  summary-panel.tsx
frontend/components/sections/: about-section.tsx  faq-section.tsx  services-section.tsx  work-section.tsx
frontend/hooks/: use-on-click-outside.ts
frontend/lib/: firebase.ts
frontend_old/: index.html  style.css
